[gd_scene load_steps=5 format=3 uid="uid://m7iarlhgo6sb"]

[ext_resource type="Script" uid="uid://uro3grhumkvg" path="res://game_scenes/profiles_screen/profiles_screen.gd" id="1_8wg2s"]
[ext_resource type="Theme" uid="uid://b2ufqqc6nun3o" path="res://pixel font/mid_font_theme.tres" id="2_qb6p7"]
[ext_resource type="Theme" uid="uid://bsacj2o8glxjs" path="res://pixel font/small_font_theme.tres" id="3_6gpeu"]
[ext_resource type="Texture2D" uid="uid://wyhspu3kjkna" path="res://images/UI_images/Startscreen.png" id="4_56ldv"]

[node name="Node2D2" type="Node2D"]
script = ExtResource("1_8wg2s")

[node name="attack_database_download" type="Button" parent="."]
offset_left = 167.0
offset_top = 143.0
offset_right = 557.0
offset_bottom = 223.0
theme = ExtResource("2_qb6p7")
text = "ATT&CK DATABASE"

[node name="defend_database_download" type="Button" parent="."]
offset_left = 167.0
offset_top = 235.0
offset_right = 557.0
offset_bottom = 315.0
theme = ExtResource("2_qb6p7")
text = "D3FEND DATABASE"

[node name="defense_template_download" type="Button" parent="."]
offset_left = 586.0
offset_top = 235.0
offset_right = 976.0
offset_bottom = 315.0
theme = ExtResource("2_qb6p7")
text = "DEFEND TEMPLATE"

[node name="timeline_template_download" type="Button" parent="."]
offset_left = 355.0
offset_top = 330.0
offset_right = 788.0
offset_bottom = 410.0
theme = ExtResource("2_qb6p7")
text = "TIMELINE TEMPLATE"

[node name="opfor_template_download" type="Button" parent="."]
offset_left = 586.0
offset_top = 143.0
offset_right = 976.0
offset_bottom = 223.0
theme = ExtResource("2_qb6p7")
text = "OPFOR TEMPLATE"

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(600, 400)
access = 2

[node name="FileDialog2" type="FileDialog" parent="."]
size = Vector2i(600, 400)
access = 2

[node name="FileDialog3" type="FileDialog" parent="."]
size = Vector2i(600, 400)
access = 2

[node name="FileDialog4" type="FileDialog" parent="."]
size = Vector2i(600, 400)
access = 2

[node name="FileDialog5" type="FileDialog" parent="."]
size = Vector2i(600, 400)
access = 2

[node name="Label" type="Label" parent="."]
offset_left = 325.0
offset_top = 49.0
offset_right = 825.0
offset_bottom = 111.0
theme = ExtResource("2_qb6p7")
text = "Create Your Profiles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 219.0
offset_top = 87.0
offset_right = 929.0
offset_bottom = 129.0
theme = ExtResource("3_6gpeu")
text = "Download the databases and use the template to create your profiles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 124.0
offset_top = 120.0
offset_right = 1030.0
offset_bottom = 143.0
theme = ExtResource("3_6gpeu")
text = "Choose a location and type a name for the files. Then open them in Excel or Google Sheets."

[node name="Label4" type="Label" parent="."]
offset_left = 99.0
offset_top = 421.0
offset_right = 152.0
offset_bottom = 453.0
theme = ExtResource("3_6gpeu")

[node name="Label5" type="Label" parent="."]
offset_left = 99.0
offset_top = 432.0
offset_right = 151.0
offset_bottom = 466.0
theme = ExtResource("3_6gpeu")

[node name="Label6" type="Label" parent="."]
offset_left = 99.0
offset_top = 443.0
offset_right = 151.0
offset_bottom = 477.0
theme = ExtResource("3_6gpeu")

[node name="Label7" type="Label" parent="."]
offset_left = 99.0
offset_top = 454.0
offset_right = 151.0
offset_bottom = 488.0
theme = ExtResource("3_6gpeu")

[node name="Label8" type="Label" parent="."]
offset_left = 99.0
offset_top = 464.0
offset_right = 151.0
offset_bottom = 498.0
theme = ExtResource("3_6gpeu")

[node name="Continue" type="Button" parent="."]
offset_left = 420.0
offset_top = 491.0
offset_right = 713.0
offset_bottom = 566.0
focus_mode = 0
theme = ExtResource("2_qb6p7")
text = "CONTINUE"

[node name="Button" type="Button" parent="."]
offset_left = 251.0
offset_top = 491.0
offset_right = 401.0
offset_bottom = 566.0
focus_mode = 0
theme = ExtResource("2_qb6p7")
text = "BACK"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 324)
scale = Vector2(1.152, 0.972973)
texture = ExtResource("4_56ldv")

[node name="HELP" type="Button" parent="."]
offset_left = 64.0
offset_top = 548.0
offset_right = 108.0
offset_bottom = 592.0
focus_mode = 0
theme = ExtResource("2_qb6p7")
text = "?"

[node name="Window" type="Window" parent="."]
initial_position = 2
size = Vector2i(400, 350)
visible = false

[node name="TextEdit" type="TextEdit" parent="Window"]
offset_right = 400.0
offset_bottom = 350.0
theme = ExtResource("3_6gpeu")
text = "                  Help

1. Download all the files by pressing the buttons with their names and import/open them in a Google Sheets or Excel file to view better

2. The ATT&CK and D3FEND databases are files that contain all the MITRE attacks and defenses along with an index and description associated with them

3. The OPFOR and Defend templates are for you to input the attacks and defenses that you have available using their index numbers as well as giving them a cost/time for attacks and a maturity level for defenses.

4. The timeline template lets you put in the steps in your mission timeline, how long each step is, a description of the steps, as well as what subsystems are in play during that step."
editable = false
wrap_mode = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HELP" to="." method="_on_help_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
